--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ body {
 }
 
 .stMarkdown {
-    background-color: #444;
+    background-color: #ffffff;
     border-radius: 4px;
     padding: 20px;
 }
