--- a/styles.css
+++ b/styles.css
@@ -83,7 +83,7 @@ body {
 }
 
 .card h3 {
-    color:rgba(0, 187, 255, 0.1);
+    color:rgb(0, 0, 0);
     margin-bottom: 10px;
     font-weight: bold;
 }
